@@ -1,4 +1,4 @@
-BOOLEAN:STRING,STRING,STRING,FLAGS
-BOOLEAN:STRING,BOXED
+VOID:STRING,STRING,STRING,FLAGS
+VOID:STRING,BOXED
 VOID:BOOLEAN,POINTER
 VOID:OBJECT,OBJECT,ENUM
